# sdl-synth

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  build.sh  synth.cpp
src/: ADSR.h  CMakeLists.txt  lut.cpp  lut8.cpp  synth.cpp  testsynth2.cpp  visualiser.cpp  visualiser.h
src/picosynth/: picosynth.cpp  picosynth.h
src/tinysynth/: tinysynth.cpp  tinysynth.h
src/tinysynth2/: adsr.cpp  adsr.h  osc.cpp  osc.h  tinysynth2.cpp  tinysynth2.h  utils.h
